Fixed line separator colors on mobile

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -2048,7 +2048,6 @@ a,
 .section-presentation-page .separator.line-separator:before,
 .section-presentation-page .separator.line-separator:after {
   border-color: white;
-  color: white;
 }
 
 .section-header-small .parallax,
